hub/resources/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: selenium-hub
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: hub
        image: selenium/hub:3.14
