hub/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  type: LoadBalancer
  ports:
  - port: 4444
    targetPort: 4444
