hub/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: selenium-hub
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: selenium-hub.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: selenium-hub
          servicePort: 4444
